# patent-translation-system-v1

./: .env.example  .gitignore  API_KEY_SHARING.md  AUTO_SECTION_FEATURE.md  BUILD_EXECUTABLE.md  Dockerfile  FILE_FORMAT_SUPPORT.md  GUI_GUIDE.md  GUI_LAUNCH_SUCCESS.md  INPUT_OUTPUT_FORMATS.md  INSTALLATION_GUIDE.md  LOGGING_AND_SETTINGS.md  QA_SYSTEM_UPDATE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  app.py  architecture.md  gui_app.py  install.sh  main.py  main_graph.py  pyproject.toml  requirements.txt  run_gui.sh  update_api_key.sh
config/: QA_CHECKLIST.md  api_config.yaml  style_guide.json  terminology.json
prompts/: analyst.prompt  reviewer.prompt  translator.prompt
src/: agents.py  analyzer.py  graph.py  logger.py  pipeline.py  qa_checker.py  rag_guide.py  schemas.py  section_parser.py  tm_manager.py  translator.py
tests/test_samples/: qa_test_claim.txt  sample_claim.docx  sample_claim.txt  sample_claim_translated.docx
